# video-subtool

./: .gitignore  .gitmessage.txt  CHANGELOG.md  LICENSE  README.md  build.ps1  make_icon.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release-windows.yml
resources/LICENSES/FFmpeg/: FFmpeg-LICENSE.txt  NOTICE.txt
src/app/: i18n.py  main.py  settings.py
src/app/controller/: batch_controller.py  mkv_controller.py  subtitle_controller.py
src/app/model/: lang_codes.py  probe_result.py  probe_stream.py  task.py  video_item.py
src/app/service/: detection_service.py  ffmpeg_service.py  notification_center.py  path_service.py
src/app/view/: about_dialog.py  main_window.py  mkv_creation_dialog.py  notifiers.py  settings_dialog.py  splash.py  stream_table_model.py  toast_overlay.py
src/app/view/workers/: batch_worker.py  startup_worker.py
